@@ -52,6 +52,7 @@ PATHSEP = @PATHSEP@
 PERL = @PERL@
 PYTHON = @PYTHON@
 TAR= @TAR@
+STRIPROFF = @STRIPROFF@
 TROFF = @TROFF@
 YODL= @YODL@
 YODL2HTML= @YODL2HTML@
