@@ -23,6 +23,6 @@ $(outdir)/%.texinfo: %.yo
 
 $(outdir)/%.txt: %.yo
 #	$(YODL2TXT) -doutdir=$(outdir) --live-data=3 -o $@ $<
-	$(YODL2MSLESS) -doutdir=$(outdir) --live-data=3 $< | striproff > $@
+	$(YODL2MSLESS) -doutdir=$(outdir) --live-data=3 $< | $(STRIPROFF) > $@
 	rm -f $(basename $<).ms
 
